# ntd-model-sch

./: .gitignore  Example_Run.py  MANIFEST.in  README.md  format_coverage.R  pickle_example.py  pyproject.toml  sch_run.py  sch_test_DALY.py  sch_test_vaccine.py  setup.py
.github/workflows/: ci.yml
amis_integration/: .gitignore  README.md  amis_integration.R  amis_integration.py  amis_intergration.R
amis_integration/tests/: test_amis_integration.py
outputs/: analyse_simulations.R  mansoniIUs_scenario3.csv  prevalence_analysis.R  stopping_treatment_analysis.R
sch_simulation/: ParallelFuncs.py  helsim_FUNC_KK.py  helsim_RUN_KK.py
sch_simulation/amis_integration/: .gitignore  README.md  amis_integration.R  amis_integration.py  reticulate_util.R  sth_fitting.R
sch_simulation/amis_integration/tests/: testthat.R
sch_simulation/data/: Coverage_template.xlsx  Coverage_template_2.xlsx  Coverage_template_3.xlsx  SCH-high_adult_burden.txt  SCH-low_adult_burden.txt  SCH_paramsKKvacc.txt  SCH_paramsKKvacc0.txt  SD1.pickle  mansoni_coverage_scenario_0.xlsx  mansoni_coverage_scenario_1.xlsx  mansoni_coverage_scenario_3a_1.xlsx  mansoni_paramsv2.txt  sch_example.txt  ~$Coverage_template_3.xlsx
sch_simulation/data/SCH_params/: SCH-1_1_1_10.txt  ascaris_coverage_scenario_0.xlsx  (+41 more)
sch_simulation/helsim_FUNC_KK/: ParallelFuncs.py  __init__.py  configuration.py  events.py  file_parsing.py  helsim_structures.py  results_processing.py  test_surveys.py  utils.py
tests/: testthat.R
tests/amis_integration/: test_amis_integration.py
tests/testthat/: test-reticulate-util.R
(+42 files in other folders)
