[tool.poetry]
name = "ntd-model-sch"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
joblib = "^1.1.0"
pandas = "^1.4.2"
scipy = "^1.8.0"
openpyxl = "^3.0.9"
cupy = "^10.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"